# Green-Factory

./: .gitignore  README.md
.cursor/rules/: GLOSSARY.md
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: compound_progression.py  main.py
backend/app/api/routes/: factories.py  users.py
backend/app/clients/: duolingo_client.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  language.py  skill.py  user.py
backend/app/repositories/: language_repository.py  skill_repository.py  user_repository.py
backend/app/schemas/: duolingo.py  duolingo_path.py  user.py
backend/app/services/: path_normalization_service.py  user_service.py
backend/contracts/: factory_example.json  factory_example_1.json  factory_example_2.json  top_factories_example.json
backend/migrations/: env.py
backend/migrations/versions/: 08abede13d62_add_duolingo_user_id_to_users.py  1a2cbdbed652_add_total_xp_to_users.py  3b4802058954_add_total_xp_to_users.py  70f00c79670f_create_languages_table.py  a1b2c3d4e5f6_add_current_course_id_to_users.py  b9f1e8d7c6a5_duolingo_user_id_bigint.py  e62685f9cd20_create_skills_table.py  e87cb26339a6_create_users_table.py
backend/scripts/: clear_user_table.py
backend/tests/: test_compound_progression.py  test_factory.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: config.ts  factory.ts  index.ts  refresh.ts  topFactories.ts
frontend/src/styles/: map.css  tokens.css  (+1 more)
(+49 files in other folders)
